# Multi-Data-Transformer-

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: output_custom.json  source_trust.json
data/configs/: compliance_audit_config.json  custom_config.json  default_config.json  hr_crm_config.json  tech_screening_config.json
data/input_test/: test_ats_candidates.json  test_ats_candidates_2.json  test_candidates.csv  test_candidates_2.csv  test_recruiter_notes.txt  test_recruiter_notes_2.txt
data/sample_inputs/: ats_candidates.json  candidates.csv  recruiter_notes.txt
src/: __init__.py  cli.py
src/core/: __init__.py  constants.py  exceptions.py  pipeline.py
src/eightfold_candidate_transformer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/extractors/: __init__.py  base.py  csv_extractor.py  json_extractor.py  text_extractor.py
src/models/: __init__.py  canonical.py  config.py  enums.py  fields.py  fragments.py
src/normalizers/: __init__.py  country.py  date.py  email.py  normalizer.py  phone.py  skill.py
src/parsers/: __init__.py  base.py  csv_parser.py  json_parser.py  text_parser.py
src/projection/: __init__.py  path_resolver.py  projector.py
src/resolution/: __init__.py  blocking.py  entity_resolver.py  matcher.py  merge.py  union_find.py
tests/: __init__.py  test_extractors.py  test_normalizers.py  test_parsers.py  test_pipeline.py  test_projection.py  test_resolution.py
